[tool.poetry]
name = "qt6-password-generator"
version = "0.1.0"
description = ""
authors = ["VladimirShleyev <hello@shleyev.ru>"]
readme = "README.md"
packages = [{include = "qt6_password_generator"}]

[tool.poetry.dependencies]
python = "3.9.6"
pyqt6 = "^6.5.1"
pyinstaller = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

